--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,15 @@ jobs:
         with:
           submodules: 'recursive'
 
+      - name: Checkout another repo
+        uses: actions/checkout@v4
+        with:
+          repository: qlenlen/TIK_mine
+          ref: master
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: qyz
+          submodules: 'recursive'
+
       - name: Free disk space (1/3)
         run: |
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
@@ -34,6 +43,16 @@ jobs:
         with:
           retain: 'compiler_cmake'
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Set up build environment
         run: |
           sudo apt update
@@ -42,7 +61,8 @@ jobs:
             jq attr ccache clang ffmpeg golang \
             libbrotli-dev libgtest-dev libprotobuf-dev libunwind-dev libpcre2-dev \
             libzstd-dev linux-modules-extra-$(uname -r) lld jq protobuf-compiler pcre2-utils webp \
-            curl xxd patchelf flex bison libarchive-tools build-essential python3.12-venv device-tree-compiler
+            curl xxd patchelf flex bison libarchive-tools build-essential python3.12-venv device-tree-compiler \
+            lz4 cpio
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
@@ -53,17 +73,13 @@ jobs:
           java-version: '11'
           cache: 'gradle'
 
-      - name: Build dependencies
-        run: source ./buildenv.sh ${{ matrix.target }}
-
-      - name: Download source firmware
+      - name: Download firmware
         run: |
-          source ./buildenv.sh ${{ matrix.target }}
-          ./scripts/download_fw.sh --ignore-target
+          ./scripts/download_fw.sh --ignore-source --ignore-target SM-S9180_CHC
 
       - name: Build ROM
         run: |
-          python dm3q_chn.py
+          python qyz/src/device/dm3q_chn.py
 
       - name: Upload to GoFile
         run: |
