--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Build ROM
         run: |
           cd qyz
-          python qyz/src/device/dm3q_chn.py
+          python src/device/dm3q_chn.py
 
       - name: Upload to GoFile
         run: |
