--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,6 +85,7 @@ jobs:
       - name: Build ROM
         run: |
           cd qyz
+          export PYTHONPATH=$(pwd)
           python src/device/dm3q_chn.py
 
       - name: Upload to GoFile
