--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [dm3q]
+        target: [ dm3q ]
 
     steps:
       - name: Checkout repo
@@ -29,7 +29,7 @@ jobs:
 
       - name: Free disk space (1/3)
         run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL /home/runner/actions-runner/cached/
           sudo docker image prune --all --force
           sudo docker builder prune -a
 
