--- a/.github/workflows/23u.yml
+++ b/.github/workflows/23u.yml
@@ -28,18 +28,12 @@ jobs:
           path: qyz
           submodules: 'recursive'
 
-      - name: Free disk space (1/3)
-        run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL /home/runner/actions-runner/cached/
-          sudo docker image prune --all --force
-          sudo docker builder prune -a
-
-      - name: Free disk space (2/3)
+      - name: Free disk space (1/2)
         uses: jlumbroso/free-disk-space@main
         with:
           tool-cache: true
 
-      - name: Free disk space (3/3)
+      - name: Free disk space (2/2)
         uses: rokibhasansagar/slimhub_actions@main
         with:
           retain: 'compiler_cmake'
@@ -90,11 +84,28 @@ jobs:
           python src/device/dm3q_chn.py
 
       - name: Upload to GoFile
+        id: upload
         run: |
-          ZIP_FILE=$(find out -maxdepth 1 -type f -name "*.zip" | head -n 1)
+          ZIP_FILE=$(find qyz/out -maxdepth 1 -type f -name "*.zip" | head -n 1)
+          if [ -z "$ZIP_FILE" ]; then
+            echo "No ZIP file found!"
+            exit 1
+          fi
 
           RESPONSE=$(curl -s -F "file=@$ZIP_FILE" -F "token=${{ secrets.GOFILE_TOKEN }}" -F "folderId=${{ secrets.GOFILE_FOLDER_ID }}" "https://upload-eu-par.gofile.io/uploadFile")
+          URL=$(echo "$RESPONSE" | jq -r '.data.downloadPage')
+          echo "download_url=$URL" >> $GITHUB_OUTPUT
 
-          echo "Uploaded successfully! Download link:"
-          echo "$RESPONSE" | jq -r '.data.downloadPage'
-          echo "WARNING! THESE BUILDS MAY NOT BOOTABLE, ONLY FLASH FOR TESTING PURPOSES ONLY IF THE DEVELOPER TOLD YOU."
+      - name: Create a new release with GoFile link
+        uses: softprops/action-gh-release@v2
+        with:
+          name: QyzROM ${{ github.run_number }}
+          tag_name: qyzrom-${{ github.run_number }}
+          body: |
+            自动构建发布
+
+            **下载链接**: ${{ steps.upload.outputs.download_url }}
+
+            > WARNING! THESE BUILDS MAY NOT BOOTABLE, ONLY FLASH FOR TESTING PURPOSES ONLY IF THE DEVELOPER TOLD YOU.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
