--- a/.github/workflows/dm3q.yml
+++ b/.github/workflows/dm3q.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: fedora-42
+    runs-on: Ubuntu-latest
 
     strategy:
       fail-fast: false
@@ -50,8 +50,8 @@ jobs:
 
       - name: Set up build environment
         run: |
-          sudo dnf -y update
-          sudo dnf -y install curl xxd patchelf flex lz4 cpio tar zip
+          sudo apt-get update
+          sudo apt-get install curl xxd patchelf flex lz4 cpio tar zip
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
