--- a/.github/workflows/dm3q.yml
+++ b/.github/workflows/dm3q.yml
@@ -1,7 +1,4 @@
-name: Build For S9180
-
-permissions:
-  contents: write
+name: Build QyzROM For S9180
 
 on:
   workflow_dispatch:
@@ -21,20 +18,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
+
+      - name: Checkout another repo
+        uses: actions/checkout@v4
+        with:
+          repository: qlenlen/TIK_mine
+          ref: master
+          token: ${{ secrets.TOKEN }}
           path: qyz
+          submodules: 'recursive'
 
-      - name: Free disk space (1/3)
-        run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
-          sudo docker image prune --all --force
-          sudo docker builder prune -a
-
-      - name: Free disk space (2/3)
+      - name: Free disk space (1/2)
         uses: jlumbroso/free-disk-space@main
         with:
           tool-cache: true
 
-      - name: Free disk space (3/3)
+      - name: Free disk space (2/2)
         uses: rokibhasansagar/slimhub_actions@main
 
       - name: Set up Python
@@ -49,8 +48,8 @@ jobs:
 
       - name: Set up build environment
         run: |
-          sudo apt -y update
-          sudo apt -y install curl xxd patchelf flex lz4 cpio tar zip
+          sudo apt-get -y update
+          sudo apt-get -y install curl xxd patchelf flex lz4 cpio tar zip
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
@@ -102,3 +101,5 @@ jobs:
             **下载链接**: ${{ steps.upload.outputs.download_url }}
 
             > WARNING! THESE BUILDS MAY NOT BOOTABLE, ONLY FLASH FOR TESTING PURPOSES ONLY IF THE DEVELOPER TOLD YOU.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
