--- a/.github/workflows/eXq.yml
+++ b/.github/workflows/eXq.yml
@@ -8,28 +8,29 @@ on:
 
 jobs:
   build:
-    runs-on: Ubuntu-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         device:
           - model: SM-S9210
             name: S24 (SM-S9210)
-            desc: 三星 Galaxy S9210 (E1Q)
             serial: RFCX90DTMRZ
           - model: SM-S9260
             name: S24+ (SM-S9260)
-            desc: 三星 Galaxy S9260 (E2Q)
             serial: R5CX116PHLE
           - model: SM-S9280
             name: S24 Ultra (SM-S9280)
-            desc: 三星 Galaxy S9280 (E3Q)
             serial: R5CWC3WXAHR
+
+    outputs:
+      device_name: ${{ matrix.device.name }}
+      download_url: ${{ steps.upload.outputs.download_url }}
+      rom_version: ${{ env.ROM_VERSION }}
 
     env:
       MODEL: ${{ matrix.device.model }}
       DEVICE_NAME: ${{ matrix.device.name }}
-      DEVICE_DESC: ${{ matrix.device.desc }}
       DEVICE_SERIAL: ${{ matrix.device.serial }}
 
     steps:
@@ -78,11 +79,11 @@ jobs:
           cd gnsf
           mkdir -p ../qyz/UI7
           pip install -r requirements.txt
-          
+
           ROM_VERSION=$(./gnsf.py -m $MODEL -r CHC check | grep -oP 'Firmware:\s*\K\S+' | cut -d'/' -f1)
           echo "ROM Version: $ROM_VERSION"
           echo "ROM_VERSION=$ROM_VERSION" >> $GITHUB_ENV
-          
+
           ./gnsf.py \
             -m $MODEL \
             -r CHC \
@@ -108,25 +109,39 @@ jobs:
             echo "No ZIP file found!"
             exit 1
           fi
-          
-          NEW_ZIP_NAME="QyzROM_CHC_${{ env.ROM_VERSION }}.zip"
+          NEW_ZIP_NAME="QyzROM_CHC_${{ env.ROM_VERSION }}_${{ env.MODEL }}.zip"
           mv "$ZIP_FILE" "qyz/UI7/$NEW_ZIP_NAME"
-          
           RESPONSE=$(curl -s -F "file=@qyz/UI7/$NEW_ZIP_NAME" -F "token=${{ secrets.GOFILE_TOKEN }}" -F "folderId=${{ secrets.GOFILE_FOLDER_ID }}" "https://upload-eu-par.gofile.io/uploadFile")
+          echo "GoFile response: $RESPONSE"
           URL=$(echo "$RESPONSE" | jq -r '.data.downloadPage')
           echo "download_url=$URL" >> $GITHUB_OUTPUT
 
-      - name: Create a new release with GoFile link
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate release body
+        run: |
+          echo "这是一个自动构建的ROM，适用于 S24 系列以下机型：" > release_body.md
+          echo "" >> release_body.md
+          echo "**${{ needs.build.outputs.device_name[0] }}**" >> release_body.md
+          echo "下载链接: ${{ needs.build.outputs.download_url[0] }}" >> release_body.md
+          echo "" >> release_body.md
+          echo "**${{ needs.build.outputs.device_name[1] }}**" >> release_body.md
+          echo "下载链接: ${{ needs.build.outputs.download_url[1] }}" >> release_body.md
+          echo "" >> release_body.md
+          echo "**${{ needs.build.outputs.device_name[2] }}**" >> release_body.md
+          echo "下载链接: ${{ needs.build.outputs.download_url[2] }}" >> release_body.md
+          echo "" >> release_body.md
+          echo "内核为 KernelSU GKI 需安装 官方apk 以激活 root 权限" >> release_body.md
+          echo "" >> release_body.md
+          echo "> WARNING! THESE BUILDS MAY NOT BOOTABLE, ONLY FLASH FOR TESTING PURPOSES ONLY IF THE DEVELOPER TOLD YOU." >> release_body.md
+
+      - name: Create unified release
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
           removeArtifacts: true
-          name: "QyzROM_CHC_${{ env.ROM_VERSION }}"
-          tag: ${{ env.ROM_VERSION }}
-          body: |
-            这是一个自动构建的ROM，适用于${{ env.DEVICE_DESC }}
-            内核为 KernelSU-Next GKI 需安装apk以激活root权限
-
-            **下载链接**: ${{ steps.upload.outputs.download_url }}
-
-            > WARNING! THESE BUILDS MAY NOT BOOTABLE, ONLY FLASH FOR TESTING PURPOSES ONLY IF THE DEVELOPER TOLD YOU.
+          name: "QyzROM_CHC_${{ needs.build.outputs.rom_version[0] }}"
+          tag: ${{ needs.build.outputs.rom_version[0] }}
+          bodyFile: release_body.md
