--- a/.github/workflows/dmXq.yml
+++ b/.github/workflows/dmXq.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Build for ${{ matrix.device.name }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -23,11 +24,6 @@ jobs:
             name: S23 Ultra (SM-S9180)
             serial: R5CW139E77Z
 
-    outputs:
-      device_name: ${{ matrix.device.name }}
-      download_url: ${{ steps.upload.outputs.download_url }}
-      rom_version: ${{ env.ROM_VERSION }}
-
     env:
       MODEL: ${{ matrix.device.model }}
       DEVICE_NAME: ${{ matrix.device.name }}
@@ -37,7 +33,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          submodules: 'recursive'
+          submodules: recursive
 
       - name: Checkout another repo
         uses: actions/checkout@v4
@@ -46,7 +42,7 @@ jobs:
           ref: master
           token: ${{ secrets.TOKEN }}
           path: qyz
-          submodules: 'recursive'
+          submodules: recursive
 
       - name: Free disk space (1/2)
         uses: jlumbroso/free-disk-space@main
@@ -69,7 +65,7 @@ jobs:
       - name: Set up build environment
         run: |
           sudo apt-get -y update
-          sudo apt-get -y install curl xxd patchelf flex lz4 cpio tar zip
+          sudo apt-get -y install curl xxd patchelf flex lz4 cpio tar zip jq
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
@@ -79,17 +75,11 @@ jobs:
           cd gnsf
           mkdir -p ../qyz/UI7
           pip install -r requirements.txt
-          ROM_VERSION=$(./gnsf.py -m $MODEL -r CHC check | grep -oP 'Firmware:\s*\K\S+' | cut -d'/' -f1)
+          ROM_VERSION=$(./gnsf.py -m "$MODEL" -r CHC check | grep -oP 'Firmware:\s*\K\S+' | cut -d'/' -f1)
           echo "ROM Version: $ROM_VERSION"
-          echo "ROM_VERSION=$ROM_VERSION" >> $GITHUB_ENV
-          ./gnsf.py \
-            -m $MODEL \
-            -r CHC \
-            -s $DEVICE_SERIAL \
-            download \
-            -O ../qyz/UI7
-          ls ../qyz/UI7
-          cd ..
+          echo "ROM_VERSION=$ROM_VERSION" >> "$GITHUB_ENV"
+          ./gnsf.py -m "$MODEL" -r CHC -s "$DEVICE_SERIAL" download -O ../qyz/UI7
+          ls -l ../qyz/UI7
 
       - name: Build ROM
         env:
@@ -110,37 +100,78 @@ jobs:
           NEW_ZIP_NAME="QyzROM_CHC_${{ env.ROM_VERSION }}_${{ env.MODEL }}.zip"
           mv "$ZIP_FILE" "qyz/UI7/$NEW_ZIP_NAME"
           RESPONSE=$(curl -s -F "file=@qyz/UI7/$NEW_ZIP_NAME" -F "token=${{ secrets.GOFILE_TOKEN }}" -F "folderId=${{ secrets.GOFILE_FOLDER_ID }}" "https://upload-eu-par.gofile.io/uploadFile")
+          echo "Upload response: $RESPONSE"
           URL=$(echo "$RESPONSE" | jq -r '.data.downloadPage')
-          echo "download_url=$URL" >> $GITHUB_OUTPUT
+          if [ -z "$URL" ] || [ "$URL" = "null" ]; then
+            echo "Failed to parse download URL from GoFile response"
+            exit 1
+          fi
+          echo "download_url=$URL" >> "$GITHUB_OUTPUT"
+
+      - name: Save release info
+        run: |
+          {
+            echo "name=${{ env.DEVICE_NAME }}";
+            echo "url=${{ steps.upload.outputs.download_url }}";
+            echo "model=${{ env.MODEL }}";
+            echo "rom_version=${{ env.ROM_VERSION }}";
+          } > "release-info-${{ env.MODEL }}.env"
+
+      - name: Upload release info artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-info-${{ env.MODEL }}
+          path: release-info-${{ env.MODEL }}.env
 
   release:
+    name: Create unified release
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Generate release body
+      - name: Download all release infos
+        uses: actions/download-artifact@v4
+        with:
+          pattern: release-info-*
+          merge-multiple: true
+
+      - name: Compute tag and generate release body
+        id: gen
+        shell: bash
         run: |
+          set -euo pipefail
           echo "这是一个自动构建的ROM，适用于 S23 系列以下机型：" > release_body.md
-          echo "" >> release_body.md
-          echo "**${{ needs.build.outputs.device_name[0] }}**" >> release_body.md
-          echo "下载链接: ${{ needs.build.outputs.download_url[0] }}" >> release_body.md
-          echo "" >> release_body.md
-          echo "**${{ needs.build.outputs.device_name[1] }}**" >> release_body.md
-          echo "下载链接: ${{ needs.build.outputs.download_url[1] }}" >> release_body.md
-          echo "" >> release_body.md
-          echo "**${{ needs.build.outputs.device_name[2] }}**" >> release_body.md
-          echo "下载链接: ${{ needs.build.outputs.download_url[2] }}" >> release_body.md
+          first=1
+          shopt -s nullglob
+          for f in release-info-*.env; do
+            # shellcheck source=/dev/null
+            source "$f"
+            echo "" >> release_body.md
+            echo "**${name}**" >> release_body.md
+            echo "下载链接: ${url}" >> release_body.md
+            if [ "$first" -eq 1 ] && [ -n "${rom_version:-}" ]; then
+              echo "rom_version=${rom_version}" >> "$GITHUB_OUTPUT"
+              first=0
+            fi
+          done
           echo "" >> release_body.md
           echo "内核为 KernelSU LKM 需安装 官方apk 以激活 root 权限" >> release_body.md
           echo "" >> release_body.md
           echo "> WARNING! THESE BUILDS MAY NOT BOOTABLE, ONLY FLASH FOR TESTING PURPOSES ONLY IF THE DEVELOPER TOLD YOU." >> release_body.md
+
+      - name: Validate computed tag
+        run: |
+          if [ -z "${{ steps.gen.outputs.rom_version }}" ]; then
+            echo "No rom_version found in artifacts!"
+            ls -l
+            exit 1
+          fi
 
       - name: Create unified release
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
           removeArtifacts: true
-          name: "QyzROM_CHC_${{ needs.build.outputs.rom_version[0] }}"
-          tag: ${{ needs.build.outputs.rom_version[0] }}
+          name: QyzROM_CHC_${{ steps.gen.outputs.rom_version }}
+          tag: ${{ steps.gen.outputs.rom_version }}
           bodyFile: release_body.md
-
-
+          token: ${{ secrets.GITHUB_TOKEN }}
