Refactor QyzROM build workflow for Fedora 42

--- a/.github/workflows/dmXq.yml
+++ b/.github/workflows/dmXq.yml
@@ -1,4 +1,4 @@
-name: Build QyzROM for S23 Series
+name: Build QyzROM for S23 Series (Fedora42 container)
 
 permissions:
   contents: write
@@ -7,9 +7,49 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    name: Build for ${{ matrix.device.name }}
+  prepare-host:
+    name: Prepare host and free up disk (runs on host)
     runs-on: ubuntu-latest
+    outputs:
+      cleaned: "true"
+    steps:
+      - name: Checkout (shallow) - optional
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          submodules: false
+
+      - name: Free disk space (1/2) - host
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+
+      - name: Free disk space (2/2) - host
+        uses: rokibhasansagar/slimhub_actions@main
+
+      - name: Extra host cleanup (best-effort)
+        run: |
+          echo "Disk usage before manual cleanup:"
+          df -h /
+          sudo du -sh /opt/hostedtoolcache || true
+          # Best-effort removals (may require sudo)
+          sudo rm -rf /opt/hostedtoolcache/* || true
+          sudo rm -rf /home/runner/.cache/pip/* || true
+          sudo rm -rf /home/runner/.cache/* || true
+          sudo rm -rf /usr/share/dotnet/* || true
+          echo "Disk usage after manual cleanup:"
+          df -h /
+
+      - name: Mark host cleaned
+        run: echo "cleaned=true" >> "$GITHUB_OUTPUT"
+
+  build-in-fedora:
+    name: Build for ${{ matrix.device.name }} (inside Fedora 42 container)
+    needs: prepare-host
+    runs-on: ubuntu-latest
+    container:
+      image: fedora:42
+      options: --user root
     strategy:
       fail-fast: false
       matrix:
@@ -30,12 +70,26 @@ jobs:
       DEVICE_SERIAL: ${{ matrix.device.serial }}
 
     steps:
+      - name: Diagnose host-clean effect (container view)
+        run: |
+          echo "===== /etc/os-release ====="
+          cat /etc/os-release || true
+          echo "===== uname -a ====="
+          uname -a || true
+          echo "===== df -h (root) ====="
+          df -h /
+          echo "===== df -h /github/workspace ====="
+          df -h /github/workspace || true
+          echo "===== ls -la /github/workspace ====="
+          ls -la /github/workspace || true
+
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          fetch-depth: 1
 
-      - name: Checkout another repo
+      - name: Checkout dependency repo into qyz
         uses: actions/checkout@v4
         with:
           repository: qlenlen/TIK_mine
@@ -43,38 +97,34 @@ jobs:
           token: ${{ secrets.TOKEN }}
           path: qyz
           submodules: recursive
+          fetch-depth: 1
 
-      - name: Free disk space (1/2)
-        uses: jlumbroso/free-disk-space@main
-        with:
-          tool-cache: true
+      - name: Set up build environment (Fedora)
+        run: |
+          # install system deps commonly used by your build
+          dnf -y upgrade || true
+          dnf -y install curl xxd patchelf flex lz4 cpio tar zip jq git make gcc rpm-build rpmdevtools which python3 python3-pip || true
+          dnf clean all || true
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          df -h .
 
-      - name: Free disk space (2/2)
-        uses: rokibhasansagar/slimhub_actions@main
-
-      - name: Set up Python
+      - name: Set up Python (optional, ensures python toolchain)
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
+      - name: Install Python dependencies for repo
         run: |
           python -m pip install --upgrade pip
           pip install -r qyz/requirements.txt
-
-      - name: Set up build environment
-        run: |
-          sudo apt-get -y update
-          sudo apt-get -y install curl xxd patchelf flex lz4 cpio tar zip jq
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Download firmware
         run: |
           git clone https://github.com/keklick1337/gnsf.git
           cd gnsf
           mkdir -p ../qyz/UI7
-          pip install -r requirements.txt
+          python -m pip install -r requirements.txt
           ROM_VERSION=$(./gnsf.py -m "$MODEL" -r CHC check | grep -oP 'Firmware:\s*\K\S+' | cut -d'/' -f1)
           echo "ROM Version: $ROM_VERSION"
           echo "ROM_VERSION=$ROM_VERSION" >> "$GITHUB_ENV"
@@ -129,7 +179,7 @@ jobs:
 
   release:
     name: Create unified release
-    needs: build
+    needs: build-in-fedora
     runs-on: ubuntu-latest
     steps:
       - name: Download all release infos
@@ -179,7 +229,3 @@ jobs:
           tag: ${{ steps.gen.outputs.rom_version }}
           bodyFile: release_body.md
           token: ${{ secrets.GITHUB_TOKEN }}
-
-
-
-
