Refactor GitHub Actions workflow for QyzROM build

--- a/.github/workflows/dmXq.yml
+++ b/.github/workflows/dmXq.yml
@@ -70,19 +70,15 @@ jobs:
       DEVICE_SERIAL: ${{ matrix.device.serial }}
 
     steps:
-      - name: Diagnose host-clean effect (container view)
+      - name: Set up build environment (Fedora)
         run: |
-          echo "===== /etc/os-release ====="
-          cat /etc/os-release || true
-          echo "===== uname -a ====="
-          uname -a || true
-          echo "===== df -h (root) ====="
-          df -h /
-          echo "===== df -h /github/workspace ====="
-          df -h /github/workspace || true
-          echo "===== ls -la /github/workspace ====="
-          ls -la /github/workspace || true
-
+          # install system deps commonly used by your build
+          dnf -y upgrade || true
+          dnf -y install curl lz4 cpio tar zip jq git || true
+          dnf clean all || true
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+    
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
@@ -98,16 +94,6 @@ jobs:
           path: qyz
           submodules: recursive
           fetch-depth: 1
-
-      - name: Set up build environment (Fedora)
-        run: |
-          # install system deps commonly used by your build
-          dnf -y upgrade || true
-          dnf -y install curl xxd patchelf flex lz4 cpio tar zip jq git make gcc rpm-build rpmdevtools which python3 python3-pip || true
-          dnf clean all || true
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          df -h .
 
       - name: Set up Python (optional, ensures python toolchain)
         uses: actions/setup-python@v5
@@ -229,3 +215,4 @@ jobs:
           tag: ${{ steps.gen.outputs.rom_version }}
           bodyFile: release_body.md
           token: ${{ secrets.GITHUB_TOKEN }}
+
