--- a/.github/workflows/dmXq.yml
+++ b/.github/workflows/dmXq.yml
@@ -49,7 +49,6 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: fedora:42
-      options: --user root
     strategy:
       fail-fast: false
       matrix:
@@ -73,9 +72,9 @@ jobs:
       - name: Set up build environment (Fedora)
         run: |
           # install system deps commonly used by your build
-          dnf -y upgrade || true
-          dnf -y install curl lz4 cpio tar zip jq git || true
-          dnf clean all || true
+          sudo dnf -y upgrade || true
+          sudo dnf -y install curl lz4 cpio tar zip jq git || true
+          sudo dnf clean all || true
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
     
@@ -215,4 +214,5 @@ jobs:
           tag: ${{ steps.gen.outputs.rom_version }}
           bodyFile: release_body.md
           token: ${{ secrets.GITHUB_TOKEN }}
+
 
